# Sensores_e_Atuadores_do_Kit_BitDogLab

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen.yml
docs/: README.md  index.html
docs/html/: BH1750-RP2040-RP3050_2README_8md.html  BH1750-RP2040-RP3050_2docs_2README_8md.html  BH1750-RP2040-RP3050_2main_8cpp.html  BH1750-RP2040-RP3050_2main_8cpp.js  BH1750-RP2040-RP3050_2main_8cpp__incl.map  BH1750-RP2040-RP3050_2main_8cpp__incl.md5  CreateAndVerifyExampleFiles_8c.html  CreateAndVerifyExampleFiles_8c.js  FatFS__SPI__example_8cpp.html  FatFS__SPI__example_8cpp.js  HDMI-RP2040-RP2350_2README_8md.html  HDMI-RP2040-RP2350_2docs_2README_8md.html  HDMI-RP2040-RP2350_2main_8c.html  HDMI-RP2040-RP2350_2main_8c.js  HDMI-RP2040-RP2350_2main_8c__incl.map  HDMI-RP2040-RP2350_2main_8c__incl.md5  I2C-RP2040-RP2350_2README_8md.html  I2C-RP2040-RP2350_2docs_2README_8md.html  I2C-proxy-RP2040-RP2350_2README_8md.html  I2C-proxy-RP2040-RP2350_2docs_2README_8md.html  I2C_8cpp.html  I2C_8cpp__incl.map  I2C_8cpp__incl.md5  I2C_8h.html  I2C_8h.js  I2C_8h__dep__incl.map  I2C_8h__dep__incl.md5  I2C_8h__incl.map  I2C_8h__incl.md5  I2C_8h_source.html  MPU6050-RP2040-RP2350_2README_8md.html  MPU6050-RP2040-RP2350_2docs_2README_8md.html  MPU6050-RP2040-RP2350_2main_8cpp.html  MPU6050-RP2040-RP2350_2main_8cpp.js  MPU6050-RP2040-RP2350_2main_8cpp__incl.map  MPU6050-RP2040-RP2350_2main_8cpp__incl.md5  MPU6050_8cpp.html  MPU6050_8cpp__incl.map  MPU6050_8cpp__incl.md5  MPU6050_8h.html  (+522 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  (+96 more)
log_vt100/: CMakeLists.txt  README.md  log_vt100.c  log_vt100.h
